--- a/src/front/styles/map.css
+++ b/src/front/styles/map.css
@@ -29,4 +29,10 @@
             }
         }
     }
+    .leaflet-control-container {
+        .leaflet-top{
+            top: 80px;
+        }
+        
+    }
 }
