--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -1,7 +1,43 @@
-/*
-    home.css: This website contains selectors only used in home.css
-
-    All pages share the styles on index.css but you should create 
-    one more css for each page that will contain the selected used 
-    on that page only (the ones not reused in other pages).
-*/
+.container-custom {
+    width: 80%;
+    margin: 0 auto;
+    .section-custom {
+        margin: 80px auto 0;
+    }
+    .image-container {
+        width: 80%;
+        position: relative;
+        .title-container {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        img{
+            width: 100%;
+        }
+    }
+    .pisos-container {
+        width: 90%;
+        .piso-container{
+            margin-top: 40px;
+            display: flex;
+            justify-content: space-between;
+            .piso {
+                position: relative;
+                width: 25%;
+                img {
+                    width: 100%;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+    }
+    .contacto-container {
+        width: 90%;
+        .form-container {
+            display: flex;
+        }
+    }
+}
