--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -38,6 +38,28 @@
         width: 90%;
         .form-container {
             display: flex;
+            p {
+                font-size: 24px;
+                margin-top: 40px;
+            }
+            img {
+                width: 75%;
+                margin: 0 0 0 25%;
+                display: block;
+            }
+            form {
+                margin-top: 60px;
+                textarea {
+                    display: block;
+                    width: 100%;
+                    height: 100px;
+                }
+                button {
+                    margin: 30px auto 0;
+                    width: 98%;
+                    display: block;
+                }
+            }
         }
     }
 }
