login+signin+cosas varias

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -7,6 +7,7 @@
     .image-container {
         width: 80%;
         position: relative;
+        margin: 0 auto;
         .title-container {
             text-align: center;
             position: absolute;
