--- a/src/front/styles/map.css
+++ b/src/front/styles/map.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 0;
+    margin-top: -80px;
     .filter-menu {
         position: absolute;
         z-index: 401;
