FEAT: Perfil generado, ciclo SignUp/Login/Logout implementado. Modificaciones menores.

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -4,6 +4,8 @@ body{
     font-family: "Roboto Mono", monospace;
     font-size: 14px;
     color: #828282;
+    margin-top: 53px;
+    height: 100vh;
 }
 a {
     text-decoration: none;
