--- a/src/front/styles/sidebar.css
+++ b/src/front/styles/sidebar.css
@@ -1,18 +1,22 @@
-.footer-custom {
-    height: auto;
-    padding: 50px 80px;
-    bottom: 0;
-    position: fixed;
+.sidebar-custom {
     background-color: rgba(0,0,0,0.8);
     display: flex;
-    width: 100%;
+    left: 0px;
+    min-height: 70vh;
     justify-content: space-between;
     z-index: 100;
+    button {
+        margin: 0 0 0 20px;
+    } 
     a {
+        margin: 0 10px;
         color: #fff;
         transition: all .3s;
         &:hover {
             color: #BF0000;
+        }
+        &:focus {
+            color: #bf0000e3;
         }
         .red-color{
             transition: all .3s;
@@ -20,14 +24,5 @@
                 color: #fff;
             }
         }
-    }
-    .footer-custom-menu-left {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .footer-custom-menu-right {
-        display: flex;
-        justify-content: space-around;
     }
 }
