--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,7 +1,7 @@
 .login-container {
     width: 60%;
     margin: 0 auto;
-    height: calc(100vh - 410px);
+    min-height: calc(100vh - 303px);
     form {
         margin-top: 50px;
     }
