--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -28,9 +28,8 @@
             .piso {
                 position: relative;
                 width: 25%;
-                img {
-                    width: 100%;
-                    margin-bottom: 10px;
+                .photo-container {
+                    height: 200px;
                 }
             }
         }
