--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -34,7 +34,7 @@
             }
         }
     }
-    .contacto-container {
+    /* .contacto-container {
         width: 90%;
         margin-bottom: 80px;
         .form-container {
@@ -43,17 +43,16 @@
                 font-size: 24px;
                 margin-top: 40px;
             }
-            img {
-                width: 75%;
-                margin: 0 0 0 25%;
-                display: block;
-            }
+            
             form {
                 margin-top: 60px;
                 textarea {
                     display: block;
                     width: 100%;
                     height: 100px;
+                    position: relative;
+                    margin: auto 0;
+                    
                 }
                 button {
                     margin: 30px auto 0;
@@ -62,5 +61,5 @@
                 }
             }
         }
-    }
+    } */
 }
