--- a/src/front/styles/map.css
+++ b/src/front/styles/map.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 100px);
     z-index: 0;
     margin-top: -53px;
     .filter-menu {
