--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,6 +5,9 @@ body{
     font-size: 14px;
     color: #828282;
     padding-top: 53px;
+    min-height: 100vh;
+    width: 100%;
+  
 }
 p {
     color: #828282;
@@ -99,3 +102,6 @@ h3 {
         display: block;
         margin: 0 auto;
     }
+
+   
+  
