--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     z-index: 100;
     a {
-        color: #fff;
+        color: #000;
         transition: all .3s;
         &:hover {
             color: #BF0000;
@@ -35,9 +35,11 @@
             }
         }
         .language-selector {
+            margin: 10px 0;
             img {
                 margin: 0 10px;
                 width: 30px;
+                height: 20px;
                 cursor: pointer;
             }
         }
