--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -15,6 +15,13 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        h1 {
+            font-size: 4.5vw;
+        }
+        
+        h2 {
+            font-size: 2.25vw;
+        }
     }
     img {
         width: 100%;
