--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -108,19 +108,19 @@ h3 {
 }
 
 
-    .detalles {
+.detalles {
     color: #BF0000;
     border: none;
-    background-color: white;
-    float: inline-end;
     margin: auto 0;
-    a:hover {
-        color:#3e3e3e }
-    }
 
-    .action-btn-left {
-        float: inline-start;
+    &:hover {
+        color: #3e3e3e
     }
+}
+
+.action-btn-left {
+    float: inline-start;
+}
 
 
 .action-btn-center {
