--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,19 +1,26 @@
 .navbar-custom {
     padding: 12px 50px;
     color: #000;
-    background-color: rgba(230,230,230,0.9);
+    background-color: rgba(230, 230, 230, 0.9);
     display: flex;
     height: 53px;
     width: 100%;
     justify-content: space-between;
     z-index: 100;
+
     .custom-link-container {
         display: flex;
+        align-items: center;
+        a {
+            height: 25px;
+        }
     }
+
     .profile-picutre img {
         margin: 0 5px;
         width: 25px;
     }
+
     button {
         margin: 0 0 0 20px;
     }
@@ -35,7 +42,7 @@
             }
         }
     }
-     
+
     .square-container {
         width: 25px;
         height: 25px;
