--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -152,3 +152,13 @@ h3 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.sort-btn-custom {
+    color: #25242463;
+    border: none;
+    background-color: white;
+
+    a:hover {
+       color: #BF0000;
+    }
+}
