--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,5 +1,5 @@
 .navbar-custom {
-    padding: 12px 50px;
+    padding: 0 50px;
     color: #000;
     background-color: rgba(230, 230, 230, 0.9);
     display: flex;
@@ -11,9 +11,6 @@
     .custom-link-container {
         display: flex;
         align-items: center;
-        a {
-            height: 25px;
-        }
     }
 
     .profile-picutre img {
@@ -61,5 +58,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+    .dropdown-toggle {
+        line-height: 29px;
     }
 }
