--- a/src/front/styles/flatProfile.css
+++ b/src/front/styles/flatProfile.css
@@ -8,6 +8,19 @@
         height: 500px;
     }
 
+    .header-custom {
+        display: flex;
+        width: 100%;
+    }
+    
+    .fotos-add-custom {
+        color: #BF0000;
+        float: inline-end;
+        text-align: right;
+        
+    
+    }
+
     h2 {
         margin: 20px 0;
     }
