--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -162,3 +162,27 @@ h3 {
        color: #BF0000;
     }
 }
+
+
+.link-custom {
+    color: #BF0000;
+    display: inline;
+    margin: auto 0;
+    float: inline-end;
+    padding-right: 12px;
+}
+
+.card-custom-view {
+    max-height: 35px;
+}
+
+ 
+
+  .description-overflow {
+    max-height: 60px; /* Adjust as needed */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -line-clamp: 3; /* Number of lines to show */
+    -webkit-box-orient: vertical;
+  }
