--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -3,7 +3,7 @@
     color: #000;
     background-color: rgba(230, 230, 230, 0.9);
     display: flex;
-    height: 53px;
+    min-height: 53px;
     width: 100%;
     justify-content: space-between;
     z-index: 100;
